@@ -8,14 +8,14 @@
     <name>GraphHopper Parent Project</name>
     <version>0.10-SNAPSHOT</version>
     <packaging>pom</packaging>
-    <url>https://graphhopper.com</url>
+    <url>https://www.graphhopper.com</url>
     <inceptionYear>2012</inceptionYear>
     <description>Super pom of GraphHopper, the fast and flexible routing engine</description>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <slf4j.version>1.7.21</slf4j.version>
+        <slf4j.version>1.7.25</slf4j.version>
         <log4j.version>1.2.17</log4j.version>
         <commons-compress.version>1.12</commons-compress.version>
         <jackson.version>2.8.4</jackson.version>
@@ -287,31 +287,10 @@
         <profile>
             <id>jdk9</id>
             <activation>
-                <activeByDefault>false</activeByDefault>                                
-                <jdk>9-ea</jdk>
+                <activeByDefault>false</activeByDefault>
+                <jdk>9</jdk>
             </activation>
-            <properties />           
-            <build>
-                <plugins>
-                    <plugin>
-                        <artifactId>maven-failsafe-plugin</artifactId>
-                        <configuration>
-                            <systemPropertyVariables />
-                            <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
-                        </configuration>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <version>2.19.1</version>
-                        <configuration>
-                            <!-- See #852 and #701 for the add exports or add opens option
-                            -->                            
-                            <argLine>-Xmx100m -Xms100m --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
+            <!-- 1. reader-shp does not work yet with jdk9. 2. See #852 and #701 for possible compiler options -->
         </profile>
     </profiles>
 
